--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>This is my simple webpage</h1>
     <div class="content"></div>
+    <script src="app.js"></script>
 </body>
 </html>
