--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>This is my simple webpage</h1>
-    <div class="content"></div>
+    <div class="container"></div>
 </body>
 </html>
