--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>This is my simple webpage</h1>
-    <div class="container clickable"></div>
+    <div class="container clickable">Click Here!</div>
     <script src="app.js"></script>
 </body>
 </html>
